err/pyups.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyUPS-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/ups'...
Listing './lib/python3.5/site-packages/ups/tests'...
Compiling './lib/python3.5/site-packages/ups/tests/test_address_validation.py'...
***   File "./lib/python3.5/site-packages/ups/tests/test_address_validation.py", line 59
    print etree.tostring(response, pretty_print=True)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ups/tests/test_rating_package.py'...
***   File "./lib/python3.5/site-packages/ups/tests/test_rating_package.py", line 73
    print etree.tostring(response, pretty_print=True)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ups/tests/test_worldship_xml.py'...
***   File "./lib/python3.5/site-packages/ups/tests/test_worldship_xml.py", line 60
    print final_xml
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
